Fixed logo shrinking on small widths

--- a/_sass/_responsive.scss
+++ b/_sass/_responsive.scss
@@ -61,11 +61,6 @@
 
 @media (max-width: 549px)
 {
-	.logo
-	{
-		width: 10%;
-	}
-
 	ul.gallery li
 	{
 		width: 100%;
@@ -82,17 +77,8 @@
 
 @media (max-width: 25rem)
 {
-
-
-	.logo
-	{
-		width: 10%;
-	}
-
 	ul.gallery li
 	{
 		padding-bottom: 66.66%;
 	}
-
-
 }
